# CSE_299-Project

./: README.md
Others/: Weekly Update 03.docx
Student Portal Login/: CMakeLists.txt  login.ui  main.cpp  mainwindow.cpp
Student Portal Management/: dashboard.cpp  dashboard.h  loginwindow.cpp  loginwindow.h  main.cpp  users.csv
Student Portal Management/Course_management/: Course_management.cpp  Course_management.layout
Student Portal Management/Course_management.h/: Course_management.h.cbp  main.cpp
Student Portal Management/cgpa.cpp/: cgpa.cpp.cbp
Student_Portal_Management/: CMakeLists.txt  cgpa_calculator.cpp  cgpa_calculator.h  course_management.cpp  dashboard.cpp  dashboard.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.ui  payment_parking.cpp  payment_parking.h
